Updated for October 4th

--- a/index.html
+++ b/index.html
@@ -140,7 +140,19 @@ var dataAll =
 "starname":  "க்ருத்திகா",
 "yoganame":  "விஷ்ணு",
 "karananame": "விஷ்ணு"
- }
+ },
+	    
+{
+"day": "புதன்",
+"date":  "2023-10-04",
+"yearname":  "சோுபக்ருது",
+"monthname":  "கன்யா",
+"thithiname": "பஞ்சம்யாயம் - உபரி சஷ்ட்யாயம்",
+"dayname":  "சௌம்யா",
+"starname":  "ரோஹினி",
+"yoganame":  "விஷ்ணு",
+"karananame": "விஷ்ணு"
+ },
 
 
  ];
@@ -276,10 +288,19 @@ avahanam:
 	கஊன்டின்ய கோத்ராணாம் கல்யாணி நாம்னீம் வசுரூபாம் மாதுலபத்னீம் ஸ்வதாநமஸ்தர்ப்பயாமி (3) <br />
 	தத்தத் கோத்ரம் முரளீதர ஷர்மாணம் வசுரூபம் சகாயம் ஸ்வதாநமஸ் தர்ப்பயாமி (3)
 </p>
+
+<p><br /> </p>
 	 
 <p>
  Instead of <strike>ஞாதாக்யாத வர்கத்வய பித்ரூன் ஸ்வதா நமஸ்தர்பயாமி</strike>, say
 தத்தத் கோத்ராணாம் தத்தத் ஶர்மணாம் வஸு-வஸு ஸ்வரூபாணாம் பித்ருவ்ய மாதுலாதி வர்கத்வய அவஸிஷ்ட்டாணாம் ஸர்வேஶாம் ஸகாருணீக பித்ரூன் ஸ்வதா நமஸ் தர்ப்பயாமி
+</p>
+	 <p>
+	firewall சாமம்
+	<br />
+	<br />
+	<br />
+
 </p>
 
 <p>
