yathasthaana manthram update

--- a/index.html
+++ b/index.html
@@ -305,7 +305,7 @@ avahanam:
 
 <p>
 யதாஸ்தானம் - (எள்ளை எடுத்து ஆவாஹனம் செய்த மாதிரி எடுத்துப்போடவும்):
-ஆயாத பிதர: ஸோம்யா கம்பீரை:பூர்வ்யை: ப்ரஜாமஸ்மப்யம் தததோ ரயிம் ச தீர்காயுத்வம் ச ஶதஶாரதஞ் ச அஸ்மாத் கூர்ச்சாத் (ஒரு கூர்ச்சமா இருக்கரவா) ஸகாருணீக வர்க்கத்வய பித்ரூன் யதாஸ்த்தானம் ப்ரதிஷ்டாபயாமி என்று எள்ளைப்போடவும்.
+த்ரவனேஹபத்ரம் ரயின்சன சர்வவீரம் நியஷ்சத உஷந்தஸ்த்வா ஹவாமஹ: உஷந்த சமிதீமஹி உஷன்ன்னுசதாதவஹ பித்ரூன் ஹவிஷே அத்தவே ஓம் பூர்பவஸ்வரோம் அஸ்மத் கூர்ச்சாத் ஆவாஹித சகாருனிக வர்கத்வய பித்ரூன் யதாஸ்தானம் ப்ரதிஷ்டாபயாமி ஷோபனார்த்தே க்ஷேமயா புரங்கமானாய ச என்று எள்ளைப்போடவும்.
 </p>
 
 <script type="text/javascript">
