updated till Saturday (7th), and updated the yathaasattaana manthram

--- a/index.html
+++ b/index.html
@@ -153,6 +153,39 @@ var dataAll =
 "yoganame":  "விஷ்ணு",
 "karananame": "விஷ்ணு"
  },
+	    {
+"day": "வியாழன்",
+"date":  "2023-10-05",
+"yearname":  "சோுபக்ருது",
+"monthname":  "கன்யா",
+"thithiname": "சஷ்ட்யாயம் - உபரி சப்தம்யாம்",
+"dayname":  "குரு",
+"starname":  "ம்ருகஷிரோ",
+"yoganame":  "வ்யதீபாத",
+"karananame": "வ்யதீபாத"
+ },
+	    {
+"day": "சப்தம்யாம்",
+"date":  "2023-10-06",
+"yearname":  "சோுபக்ருது",
+"monthname":  "கன்யா",
+"thithiname": "சப்தம்யாம் - உபரி அஷ்டம்யாம்",
+"dayname":  "ப்ருகு",
+"starname":  "ஆர்த்ரா",
+"yoganame":  "வரீயான்",
+"karananame": "பவ"
+ },
+	    {
+"day": "சனி",
+"date":  "2023-10-07",
+"yearname":  "சோுபக்ருது",
+"monthname":  "கன்யா",
+"thithiname": "அஷ்டம்யாம் - உபரி நவம்யாம்",
+"dayname":  "ஸ்திர",
+"starname":  "புனர்வஸு",
+"yoganame":  "பரிக",
+"karananame": "கெளலவ"
+ },
 
 
  ];
@@ -284,9 +317,9 @@ avahanam:
 </p>
 
 <p>
-	பாரத்வாஜ கோத்ராணாம் கனகவல்லி நாம்னீம் வசுரூபாம் மாத்ருபகீனீம் ஸ்வதாநமஸ்தர்ப்பயாமி (3) <br />
-	கஊன்டின்ய கோத்ராணாம் கல்யாணி நாம்னீம் வசுரூபாம் மாதுலபத்னீம் ஸ்வதாநமஸ்தர்ப்பயாமி (3) <br />
-	தத்தத் கோத்ரம் முரளீதர ஷர்மாணம் வசுரூபம் சகாயம் ஸ்வதாநமஸ் தர்ப்பயாமி (3)
+	பாரத்வாஜ கோத்ராணாம் கனகவல்லி நாம்னீம் வசுரூபாம் மாத்ருபகீனீம் ஸ்வதாநமஸ்தர்ப்பயாமி (3) <br /><br />
+	கஊன்டின்ய கோத்ராணாம் கல்யாணி நாம்னீம் வசுரூபாம் மாதுலபத்னீம் ஸ்வதாநமஸ்தர்ப்பயாமி (3) <br /><br />
+	தத்தத் கோத்ரம் முரளீதர ஷர்மாணம் வசுரூபம் சகாயம் ஸ்வதாநமஸ் தர்ப்பயாமி (3)<br /><br />
 </p>
 
 <p><br /> </p>
@@ -305,7 +338,7 @@ avahanam:
 
 <p>
 யதாஸ்தானம் - (எள்ளை எடுத்து ஆவாஹனம் செய்த மாதிரி எடுத்துப்போடவும்):
-த்ரவனேஹபத்ரம் ரயின்சன சர்வவீரம் நியஷ்சத உஷந்தஸ்த்வா ஹவாமஹ: உஷந்த சமிதீமஹி உஷன்ன்னுசதாதவஹ பித்ரூன் ஹவிஷே அத்தவே ஓம் பூர்பவஸ்வரோம் அஸ்மத் கூர்ச்சாத் ஆவாஹித சகாருனிக வர்கத்வய பித்ரூன் யதாஸ்தானம் ப்ரதிஷ்டாபயாமி ஷோபனார்த்தே க்ஷேமயா புரங்கமானாய ச என்று எள்ளைப்போடவும்.
+ஏத பிதர: சௌம்யாச: கம்பீரேபி: பதிபி: பூர்வனேபி: தத்தாஸ்மப்யம் த்ரவனேஹபத்ரம் ரயின்சன சர்வவீரம் நியஷ்சத உஷந்தஸ்த்வா ஹவாமஹ: உஷந்த சமிதீமஹி உஷன் உஷதாத ஆவஹ பித்ரூன் ஹவிஷே அத்தவே ஓம் பூர்பவஸ்வரோம் அஸ்மத் கூர்ச்சாத் ஆவாஹித சகாருனிக வர்கத்வய பித்ரூன் யதாஸ்தானம் ப்ரதிஷ்டாபயாமி ஷோபனார்த்தே க்ஷேமயா புரங்கமானாய ச என்று எள்ளைப்போடவும்.
 </p>
 
 <script type="text/javascript">
