--- a/index.html
+++ b/index.html
@@ -338,7 +338,7 @@ avahanam:
 
 <p>
 யதாஸ்தானம் - (எள்ளை எடுத்து ஆவாஹனம் செய்த மாதிரி எடுத்துப்போடவும்):
-ஏத பிதர: சௌம்யாச: கம்பீரேபி: பதிபி: பூர்வனேபி: தத்தாஸ்மப்யம் த்ரவனேஹபத்ரம் ரயின்சன சர்வவீரம் நியஷ்சத உஷந்தஸ்த்வா ஹவாமஹ: உஷந்த சமிதீமஹி உஷன் உஷதாத ஆவஹ பித்ரூன் ஹவிஷே அத்தவே ஓம் பூர்பவஸ்வரோம் அஸ்மத் கூர்ச்சாத் ஆவாஹித சகாருனிக வர்கத்வய பித்ரூன் யதாஸ்தானம் ப்ரதிஷ்டாபயாமி ஷோபனார்த்தே க்ஷேமயா புரங்கமானாய ச என்று எள்ளைப்போடவும்.
+ஏத பிதர: சௌம்யாச: கம்பீரேபி: பதிபி: பூர்வனேபி: தத்தாஸ்மப்யம் த்ரவனேஹபத்ரம் ரயின்சன சர்வவீரம் நியஷ்சத உஷந்தஸ்த்வா ஹவாமஹ: உஷந்த சமிதீமஹி உஷன் உஷதாத ஆவஹ பித்ரூன் ஹவிஷே அத்தவே ஓம் பூர்பவஸ்வரோம் அஸ்மத் கூர்ச்சாத் ஆவாஹித சகாருனிக வர்கத்வய பித்ரூன் யதாஸ்தானம் ப்ரதிஷ்டாபயாமி ஷோபனார்த்தே க்ஷேமயா புனராகமனாய ச என்று எள்ளைப்போடவும்.
 </p>
 
 <script type="text/javascript">
