updated for October 10th

--- a/index.html
+++ b/index.html
@@ -186,6 +186,17 @@ var dataAll =
 "yoganame":  "பரிக",
 "karananame": "கெளலவ"
  },
+{
+"day": "ஞாயிறு",
+"date":  "2023-10-08",
+"yearname":  "சோுபக்ருது",
+"monthname":  "கன்யா",
+"thithiname": "நவம்யாம் - உபரி தஷம்யாம்",
+"dayname":  "பானு",
+"starname":  "புஷ்ய",
+"yoganame":  "சிவ",
+"karananame": "கரஜ"
+ },
 
 
  ];
