Update up to October 11th (wednesday)

--- a/index.html
+++ b/index.html
@@ -197,7 +197,39 @@ var dataAll =
 "yoganame":  "சிவ",
 "karananame": "கரஜ"
  },
-
+{
+"day": "திங்கள்",
+"date":  "2023-10-09",
+"yearname":  "சோுபக்ருது",
+"monthname":  "கன்யா",
+"thithiname": "தஷம்யாம்",
+"dayname":  "இந்து",
+"starname":  "ஆஷ்லேஷா",
+"yoganame":  "சித்த",
+"karananame": "பத்ர"
+ },
+{
+"day": "செவ்வாய்",
+"date":  "2023-10-10",
+"yearname":  "சோுபக்ருது",
+"monthname":  "கன்யா",
+"thithiname": "ஏகாதசியாம்",
+"dayname":  "பெளம",
+"starname":  "மகா",
+"yoganame":  "ஸாத்ய",
+"karananame": "பாலவ"
+ },	    
+{
+"day": "புதன்",
+"date":  "2023-10-11",
+"yearname":  "சோுபக்ருது",
+"monthname":  "கன்யா",
+"thithiname": "த்வாதசியாம்",
+"dayname":  "ஸெளம்ய",
+"starname":  "மகா த து பரிபூர்வ பல்குனி",
+"yoganame":  "சுப",
+"karananame": "தைதுல"
+ },
 
  ];
  
@@ -330,7 +362,6 @@ avahanam:
 <p>
 	பாரத்வாஜ கோத்ராணாம் கனகவல்லி நாம்னீம் வசுரூபாம் மாத்ருபகீனீம் ஸ்வதாநமஸ்தர்ப்பயாமி (3) <br /><br />
 	கஊன்டின்ய கோத்ராணாம் கல்யாணி நாம்னீம் வசுரூபாம் மாதுலபத்னீம் ஸ்வதாநமஸ்தர்ப்பயாமி (3) <br /><br />
-	தத்தத் கோத்ரம் முரளீதர ஷர்மாணம் வசுரூபம் சகாயம் ஸ்வதாநமஸ் தர்ப்பயாமி (3)<br /><br />
 </p>
 
 <p><br /> </p>
