Updated for October 13th, 14th, and 15th

--- a/index.html
+++ b/index.html
@@ -230,7 +230,39 @@ var dataAll =
 "yoganame":  "சுப",
 "karananame": "தைதுல"
  },
-
+	    {
+"day": "வெள்ளி",
+"date":  "2023-10-13",
+"yearname":  "சோுபக்ருது",
+"monthname":  "கன்யா",
+"thithiname": "சதுர்தசியாம்",
+"dayname":  "ப்ருகு",
+"starname":  "உத்திர பல்குனி",
+"yoganame":  "சப்ராம்ய",
+"karananame": "பத்ர"
+ },
+{
+"day": "சனி",
+"date":  "2023-10-14",
+"yearname":  "சோுபக்ருது",
+"monthname":  "கன்யா",
+"thithiname": "அமாவாஸ்யாயாம்",
+"dayname":  "ஸ்திர",
+"starname":  "ஹஸ்த",
+"yoganame":  "மாஹேந்திர/வைத்ருதி",
+"karananame": "சதுஷ்பாத"
+ },
+{
+"day": "ஞாயிறு",
+"date":  "2023-10-15",
+"yearname":  "சோுபக்ருது",
+"monthname":  "கன்யா",
+"thithiname": "ப்ரதமாயாம்",
+"dayname":  "பானு",
+"starname":  "சித்ரா",
+"yoganame":  "சித்த / வைத்ருதி",
+"karananame": "கிம்ஸ்துக்ன"
+ },
  ];
  
  //filter for the current date sankalpam
